// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Format Format 1`] = `
Object {
  "errorCount": 0,
  "messages": Array [],
  "output": "const foo = \\"bar\\"",
  "warningCount": 0,
}
`;

exports[`Format Format with filePath 1`] = `
Object {
  "errorCount": 0,
  "filePath": "test.js",
  "messages": Array [],
  "output": "const foo = \\"bar\\"",
  "warningCount": 0,
}
`;

exports[`Format Format with prettier registered 1`] = `
Object {
  "errorCount": 0,
  "messages": Array [],
  "output": "prettier:const foo = \\"bar\\"",
  "warningCount": 0,
}
`;

exports[`Format Format with prettier registered 2`] = `
Object {
  "errorCount": 0,
  "filePath": "test.js",
  "messages": Array [],
  "output": "prettier:const foo = \\"bar\\"",
  "warningCount": 0,
}
`;
